--- a/receptionist/room inventory/detail_occupied.html
+++ b/receptionist/room inventory/detail_occupied.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../assets/sidenav/sidenav.css">
-    <title>Room (Receptionist) | Occupied Room Detail</title>
+    <title>Room 401 | Receptionist</title>
 </head>
 <body>
     <div class="container-fluid">
@@ -160,6 +160,13 @@
                                   <input type="text" readonly class="form-control-plaintext" id="" value="2023/08/04">
                                 </div>
                             </div> 
+                            <!-- room status -->
+                            <div class="row">
+                                <label for="" class="col-sm-2 col-form-label fw-bold">Room Status</label>
+                                <div class="col-sm-10">
+                                  <input type="text" readonly class="form-control-plaintext" id="" value="Occupied">
+                                </div>
+                            </div>
                         </div>
                         <div class="card-footer text-end">
                             <div class="d-flex justify-content-end">
