--- a/receptionist/room inventory/detail_onchange.html
+++ b/receptionist/room inventory/detail_onchange.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../assets/sidenav/sidenav.css">
-    <title>Room (Receptionist) | On-Change Room Detail</title>
+    <title>Room 401 | Receptionist</title>
 </head>
 <body>
     <div class="container-fluid">
@@ -139,6 +139,13 @@
                                   <input type="text" readonly class="form-control-plaintext" id="" value="4">
                                 </div>
                             </div> 
+                            <!-- room status -->
+                            <div class="row">
+                                <label for="" class="col-sm-2 col-form-label fw-bold">Room Status</label>
+                                <div class="col-sm-10">
+                                  <input type="text" readonly class="form-control-plaintext" id="" value="On-Change">
+                                </div>
+                            </div>
                             <!-- house keeping staff  -->
                             <div class="row">
                                 <label for="" class="col-sm-2 col-form-label fw-bold">House Keeping Staff</label>
