--- a/receptionist/room inventory/list_allrooms.html
+++ b/receptionist/room inventory/list_allrooms.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Room (Receptionist) | All Room List</title>
+    <title>All Rooms | Receptionist</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../assets/sidenav/sidenav.css">
     <link rel="stylesheet" href="../../assets/css/roomnav.css">
@@ -105,47 +105,47 @@
                     <h2 class="display-6 fw-bold">Room</h2>
                 </div>
                 <!-- Room Navigation -->
-             <div class="container mt-3">
-                <div class="d-flex justify-content-between align-items-stretch pt-2 text-white">
-                    <ul class="nav nav-pills justify-content-between flex-shrink-0 mb-sm-auto mb-0 align-items-center align-items-sm-stretch " id="menu">
-                        <!-- all rooms-->
-                        <li class="nav-item line">
-                            <a href="#" class="nav-link align-middle nav_text room_active">
-                                <i class="fa-solid fa-bed me-sm-1 ms-2"></i>
-                                <span class="">All Rooms</span>                        
-                            </a>
-                        </li>
-                        <!-- vacant rooms-->
-                        <li class="nav-item line">
-                            <a href="#" class="nav-link align-middle nav_text">
-                                <i class="fa-solid fa-tags me-sm-1 ms-2"></i>
-                                <span class="">Vacant Rooms</span>
-                            </a>
-                        </li>
-                        <!-- occupied rooms-->
-                        <li class="nav-item line">
-                            <a href="#" class="nav-link align-middle nav_text ">
-                                <i class="fa-solid fa-house-lock me-sm-1 ms-2"></i>
-                                <span class="">Occupied Rooms</span>
-                            </a>
-                        </li>
-                        <!-- on-change rooms-->
-                        <li class="nav-item line">
-                            <a href="#" class="nav-link align-middle nav_text">
-                                <i class="fa-solid fa-broom me-sm-1 ms-2"></i>
-                                <span class="">On-Change Rooms</span>
-                            </a>
-                        </li>
-                        <!-- out-of-order rooms-->
-                        <li class="nav-item ">
-                            <a href="#" class="nav-link align-middle nav_text">
-                                <i class="fa-solid fa-circle-minus me-sm-1 ms-2 "></i>
-                                <span class="">Out-of-Order Rooms</span>
-                            </a>
-                        </li>
-                    </ul>
+                <div class="container mt-3">
+                    <div class="d-flex justify-content-between align-items-stretch pt-2 text-white">
+                        <ul class="nav nav-pills justify-content-between flex-shrink-0 mb-sm-auto mb-0 align-items-center align-items-sm-stretch " id="menu">
+                            <!-- all rooms-->
+                            <li class="nav-item line">
+                                <a href="#" class="nav-link align-middle nav_text room_active">
+                                    <i class="fa-solid fa-bed me-sm-1 ms-2"></i>
+                                    <span class="">All Rooms</span>                        
+                                </a>
+                            </li>
+                            <!-- vacant rooms-->
+                            <li class="nav-item line">
+                                <a href="#" class="nav-link align-middle nav_text">
+                                    <i class="fa-solid fa-tags me-sm-1 ms-2"></i>
+                                    <span class="">Vacant Rooms</span>
+                                </a>
+                            </li>
+                            <!-- occupied rooms-->
+                            <li class="nav-item line">
+                                <a href="#" class="nav-link align-middle nav_text ">
+                                    <i class="fa-solid fa-house-lock me-sm-1 ms-2"></i>
+                                    <span class="">Occupied Rooms</span>
+                                </a>
+                            </li>
+                            <!-- on-change rooms-->
+                            <li class="nav-item line">
+                                <a href="#" class="nav-link align-middle nav_text">
+                                    <i class="fa-solid fa-broom me-sm-1 ms-2"></i>
+                                    <span class="">On-Change Rooms</span>
+                                </a>
+                            </li>
+                            <!-- out-of-order rooms-->
+                            <li class="nav-item ">
+                                <a href="#" class="nav-link align-middle nav_text">
+                                    <i class="fa-solid fa-circle-minus me-sm-1 ms-2 "></i>
+                                    <span class="">Out-of-Order Rooms</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
                 
 
                 <!-- Table -->
@@ -167,9 +167,7 @@
                             <th scope="col">Room Number</th>
                             <th scope="col">Room Type</th>
                             <th scope="col">Room Floor</th>
-                            <th scope="col">Room Capacity</th>
                             <th scope="col">Room Status</th>
-                            <th scope="col">Room Price</th>
                             <th scope="col"></th>
                             <th scope="col"></th>
                           </tr>
@@ -179,33 +177,25 @@
                             <td>401</td>
                             <td>Deluxe</td>
                             <td>4</td>
-                            <td>6</td>
                             <td>Vacant</td>
-                            <td>2500</td>
                           </tr>
                           <tr data-bs-toggle="modal" data-bs-target="#det-modal">
                             <td>401</td>
                             <td>Deluxe</td>
                             <td>4</td>
-                            <td>6</td>
                             <td>Occupied</td>
-                            <td>2500</td>
                           </tr>
                           <tr data-bs-toggle="modal" data-bs-target="#det-modal">
                             <td>401</td>
                             <td>Deluxe</td>
                             <td>4</td>
-                            <td>6</td>
                             <td>Vacant</td>
-                            <td>2500</td>
                           </tr>
                           <tr data-bs-toggle="modal" data-bs-target="#det-modal">
                             <td>401</td>
                             <td>Deluxe</td>
                             <td>4</td>
-                            <td>6</td>
                             <td>Occupied</td>
-                            <td>2500</td>
                           </tr>
                         </tbody>
                     </table>
