--- a/receptionist/room inventory/list_vacant.html
+++ b/receptionist/room inventory/list_vacant.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Room (Receptionist) | Vacant Room List</title>
+    <title>Vacant Rooms | Receptionist</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../assets/sidenav/sidenav.css">
     <link rel="stylesheet" href="../../assets/css/roomnav.css">
@@ -167,10 +167,8 @@
                             <th scope="col">Room Number</th>
                             <th scope="col">Room Type</th>
                             <th scope="col">Room Floor</th>
-                            <th scope="col">Room Capacity</th>
-                            <th scope="col">Room Price</th>
-                            <th scope="col"></th>
-                            <th scope="col"></th>
+                            <th scope="col">Price</th>
+                            <th scope="col">Capacity</th>
                           </tr>
                         </thead>
                         <tbody>
@@ -178,29 +176,29 @@
                             <td>401</td>
                             <td>Deluxe</td>
                             <td>4</td>
-                            <td>6</td>
                             <td>2500</td>
+                            <td>6</td>
                           </tr>
                           <tr data-bs-toggle="modal" data-bs-target="#det-modal">
                             <td>401</td>
                             <td>Deluxe</td>
                             <td>4</td>
-                            <td>6</td>
                             <td>2500</td>
+                            <td>6</td>
                           </tr>
                           <tr data-bs-toggle="modal" data-bs-target="#det-modal">
                             <td>401</td>
                             <td>Deluxe</td>
                             <td>4</td>
-                            <td>6</td>
                             <td>2500</td>
+                            <td>6</td>
                           </tr>
                           <tr data-bs-toggle="modal" data-bs-target="#det-modal">
                             <td>401</td>
                             <td>Deluxe</td>
                             <td>4</td>
-                            <td>6</td>
                             <td>2500</td>
+                            <td>6</td>
                           </tr>
                         </tbody>
                     </table>
