--- a/manager/reservation/detail_reservation.html
+++ b/manager/reservation/detail_reservation.html
@@ -123,18 +123,11 @@
                                 </div>
                             </div> 
                             -->
-                            <!-- last name  -->
+                            <!-- full name  -->
                             <div class="row">
-                                <label for="" class="col-sm-2 col-form-label fw-bold">Last Name</label>
+                                <label for="" class="col-sm-2 col-form-label fw-bold">Full Name</label>
                                 <div class="col-sm-10">
-                                  <input type="text" readonly class="form-control-plaintext" id="" value="Doe">
-                                </div>
-                            </div> 
-                            <!-- first name  -->
-                            <div class="row">
-                                <label for="" class="col-sm-2 col-form-label fw-bold">First Name</label>
-                                <div class="col-sm-10">
-                                  <input type="text" readonly class="form-control-plaintext" id="" value="John">
+                                  <input type="text" readonly class="form-control-plaintext" id="" value="John Doe">
                                 </div>
                             </div> 
                             <!-- home address  -->
