--- a/manager/reservation/edit_reservation.html
+++ b/manager/reservation/edit_reservation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Edit Reservation | 1001</title>
+    <title>Edit Reservation | 1001</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../assets/sidenav/sidenav.css">
 </head>
@@ -123,20 +123,13 @@
                                 </div>
                             </div> 
                             -->
-                            <!-- last name  -->
+                            <!-- full name  -->
                             <div class="row">
-                                <label for="" class="col-sm-2 col-form-label fw-bold">Last Name</label>
+                                <label for="" class="col-sm-2 col-form-label fw-bold">Full Name</label>
                                 <div class="col-sm-10">
-                                  <input type="text" class="form-control" id="" value="Doe">
+                                  <input type="text" class="form-control" id="" value="John Doe">
                                 </div>
-                            </div> 
-                            <!-- first name  -->
-                            <div class="row">
-                                <label for="" class="col-sm-2 col-form-label fw-bold">First Name</label>
-                                <div class="col-sm-10">
-                                  <input type="text" class="form-control" id="" value="John">
-                                </div>
-                            </div> 
+                            </div>
                             <!-- home address  -->
                             <div class="row">
                                 <label for="" class="col-sm-2 col-form-label fw-bold">Home Address</label>
@@ -178,21 +171,21 @@
                             <div class="row">
                                 <label for="" class="col-sm-2 col-form-label fw-bold">Check-In Date</label>
                                 <div class="col-sm-10">
-                                  <input type="text" class="form-control" id="" value="2023/08/02">
+                                  <input type="date" class="form-control" id="" value="2023/08/02">
                                 </div>
                             </div> 
                             <!-- check out date  -->
                             <div class="row">
                                 <label for="" class="col-sm-2 col-form-label fw-bold">Check-Out Date</label>
                                 <div class="col-sm-10">
-                                  <input type="text" class="form-control" id="" value="2023/08/04">
+                                  <input type="date" class="form-control" id="" value="2023/08/04">
                                 </div>
                             </div> 
                             <!-- number of days  -->
                             <div class="row">
                                 <label for="" class="col-sm-2 col-form-label fw-bold">Number of Days</label>
                                 <div class="col-sm-10">
-                                  <input type="text" class="form-control" id="" value="2">
+                                  <input type="number" class="form-control" id="" value="2">
                                 </div>
                             </div> 
                             <!-- number of adults  -->
@@ -227,9 +220,13 @@
                             -->
                             <!-- room type  -->
                             <div class="row">
-                                <label for="" class="col-sm-2 col-form-label fw-bold">Room Type</label>
+                                <label for="roomType" class="col-sm-2 col-form-label fw-bold">Room Type</label>
                                 <div class="col-sm-10">
-                                  <input type="text" class="form-control" id="" value="Deluxe">
+                                    <select class="form-select">
+                                        <option value="standard">Standard</option>
+                                        <option value="deluxe">Deluxe</option>
+                                        <option value="suite">Suite</option>
+                                    </select>
                                 </div>
                             </div>
                             <!-- room number -->
@@ -257,11 +254,15 @@
                             -->
                             <!-- mode of payment  -->
                             <div class="row">
-                                <label for="" class="col-sm-2 col-form-label fw-bold">Mode of Payment</label>
+                                <label for="roomType" class="col-sm-2 col-form-label fw-bold">Mode of Payment</label>
                                 <div class="col-sm-10">
-                                  <input type="text" class="form-control" id="" value="Credit Card">
+                                    <select class="form-select">
+                                        <option value="credit">Credit Card</option>
+                                        <option value="debit">Debit Card</option>
+                                        <option value="cash">Cash</option>
+                                    </select>
                                 </div>
-                            </div> 
+                            </div>
                             <!-- starting balance  -->
                             <div class="row">
                                 <label for="" class="col-sm-2 col-form-label fw-bold">Starting Balance</label>
@@ -271,11 +272,15 @@
                             </div> 
                             <!-- paid  -->
                             <div class="row">
-                                <label for="" class="col-sm-2 col-form-label fw-bold">Paid</label>
+                                <label for="roomType" class="col-sm-2 col-form-label fw-bold">Paid</label>
                                 <div class="col-sm-10">
-                                  <input type="text" class="form-control" id="" value="Downpayment">
+                                    <select class="form-select">
+                                        <option value="full">Full</option>
+                                        <option value="downpayment">Downpayment</option>
+                                        <option value="none">None</option>
+                                    </select>
                                 </div>
-                            </div> 
+                            </div>
                             <!-- balance  -->
                             <div class="row">
                                 <label for="" class="col-sm-2 col-form-label fw-bold">Balance</label>
