--- a/mr/guest account/GA_accountinfo.html
+++ b/mr/guest account/GA_accountinfo.html
@@ -106,7 +106,8 @@
 
                 <!-- start coding here  -->
                 <div class="container mt-5 d-flex align-items-center">
-                    <img src="https://github.com/mdo.png" alt="hugenerd" width="80" height="80" class="rounded-circle">
+                    <!-- <img src="https://github.com/mdo.png" alt="hugenerd" width="80" height="80" class="rounded-circle"> -->
+                    <i class="fa-solid fa-circle-user" style="font-size:5rem;"></i>
                     <strong class="ms-4 display-6 fw-bold">John Doe</strong> <!-- username here -->
                 </div>
 
