--- a/mr/guest account/GA_editaccountinfo.html
+++ b/mr/guest account/GA_editaccountinfo.html
@@ -6,7 +6,7 @@
     <title>Edit Account Information | John Doe</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../assets/sidenav/sidenav.css">
-    <link rel="stylesheet" href="../../assets/css/modulenav.css">>
+    <link rel="stylesheet" href="../../assets/css/modulenav.css">
 </head>
 <body>
     <div class="container-fluid">
@@ -106,7 +106,8 @@
 
                 <!-- start coding here  -->
                 <div class="container mt-5 d-flex align-items-center">
-                    <img src="https://github.com/mdo.png" alt="hugenerd" width="80" height="80" class="rounded-circle">
+                    <!-- <img src="https://github.com/mdo.png" alt="hugenerd" width="80" height="80" class="rounded-circle"> -->
+                    <i class="fa-solid fa-circle-user" style="font-size:5rem;"></i>
                     <strong class="ms-4 display-6 fw-bold">John Doe</strong> <!-- username here -->
                 </div>
 
@@ -196,21 +197,21 @@
                             <div class="row">
                                 <label for="" class="col-sm-2 col-form-label fw-bold">Check-In Date</label>
                                 <div class="col-sm-10">
-                                  <input type="text" class="form-control" id="" value="2023/08/02">
+                                  <input type="date" class="form-control" id="" value="2023/08/02">
                                 </div>
                             </div> 
                             <!-- check out date  -->
                             <div class="row">
                                 <label for="" class="col-sm-2 col-form-label fw-bold">Check-Out Date</label>
                                 <div class="col-sm-10">
-                                  <input type="text" class="form-control" id="" value="2023/08/04">
+                                  <input type="date" class="form-control" id="" value="2023/08/04">
                                 </div>
                             </div> 
                              <!-- number of days  -->
                              <div class="row">
                                 <label for="" class="col-sm-2 col-form-label fw-bold">Number of Days</label>
                                 <div class="col-sm-10">
-                                  <input type="text" class="form-control" id="" value="2">
+                                  <input type="number" class="form-control" id="" value="2">
                                 </div>
                             </div> 
                             <!-- number of adults  -->
@@ -245,9 +246,13 @@
                             -->
                             <!-- room type  -->
                             <div class="row">
-                                <label for="" class="col-sm-2 col-form-label fw-bold">Room Type</label>
+                                <label for="roomType" class="col-sm-2 col-form-label fw-bold">Room Type</label>
                                 <div class="col-sm-10">
-                                  <input type="text" class="form-control" id="" value="Deluxe">
+                                    <select class="form-select">
+                                        <option value="standard">Standard</option>
+                                        <option value="deluxe">Deluxe</option>
+                                        <option value="suite">Suite</option>
+                                    </select>
                                 </div>
                             </div>
                              <!-- room number  -->
@@ -275,9 +280,13 @@
                             -->
                             <!-- mode of payment  -->
                             <div class="row">
-                                <label for="" class="col-sm-2 col-form-label fw-bold">Mode of Payment</label>
+                                <label for="roomType" class="col-sm-2 col-form-label fw-bold">Mode of Payment</label>
                                 <div class="col-sm-10">
-                                  <input type="text" class="form-control" id="" value="Credit Card">
+                                    <select class="form-select">
+                                        <option value="credit">Credit Card</option>
+                                        <option value="debit">Debit Card</option>
+                                        <option value="cash">Cash</option>
+                                    </select>
                                 </div>
                             </div> 
                             <!-- starting balance  -->
@@ -289,9 +298,13 @@
                             </div> 
                             <!-- paid  -->
                             <div class="row">
-                                <label for="" class="col-sm-2 col-form-label fw-bold">Paid</label>
+                                <label for="roomType" class="col-sm-2 col-form-label fw-bold">Paid</label>
                                 <div class="col-sm-10">
-                                  <input type="text" class="form-control" id="" value="Downpayment">
+                                    <select class="form-select">
+                                        <option value="full">Full</option>
+                                        <option value="downpayment">Downpayment</option>
+                                        <option value="none">None</option>
+                                    </select>
                                 </div>
                             </div> 
                             <!-- balance  -->
