--- a/mr/reservation/create_reservation.html
+++ b/mr/reservation/create_reservation.html
@@ -51,6 +51,12 @@
                                 <span class="ms-1 d-none d-sm-inline">Occupancy Demand</span>
                             </a>
                         </li>
+                        <li class="nav-item">
+                          <a href="#" class="nav-link align-middle text-white">
+                              <i class="fa-solid fa-tag me-sm-2"></i>
+                              <span class="ms-1 d-none d-sm-inline">Promos and Deals</span>
+                          </a>
+                      </li>
                     </ul>
                     <hr>
                     <div class="dropdown pb-4">
