--- a/manager/room inventory/detail_occupied.html
+++ b/manager/room inventory/detail_occupied.html
@@ -50,6 +50,12 @@
                                 <span class="ms-1 d-none d-sm-inline">Occupancy Demand</span>
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link align-middle text-white">
+                                <i class="fa-solid fa-tag me-sm-2"></i>
+                                <span class="ms-1 d-none d-sm-inline">Promos and Deals</span>
+                            </a>
+                        </li>
                     </ul>
                     <hr>
                     <div class="dropdown pb-4">
@@ -176,7 +182,7 @@
                         <div class="card-footer text-end">
                             <div class="d-flex justify-content-end">
                                 <!-- <button class="btn btn-primary" data-bs-dismiss="modal" aria-label="Close">Close</button> -->
-                                <button class="btn btn-primary">Close</button>
+                                <button class="btn btn-primary">Back</button>
                             </div>
                         </div>
                     </div>                
