--- a/manager/room inventory/detail_vacant.html
+++ b/manager/room inventory/detail_vacant.html
@@ -50,6 +50,12 @@
                                 <span class="ms-1 d-none d-sm-inline">Occupancy Demand</span>
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link align-middle text-white">
+                                <i class="fa-solid fa-tag me-sm-2"></i>
+                                <span class="ms-1 d-none d-sm-inline">Promos and Deals</span>
+                            </a>
+                        </li>
                     </ul>
                     <hr>
                     <div class="dropdown pb-4">
@@ -171,7 +177,7 @@
                                 <!-- <button class="btn btn-primary">Close</button> -->
                                 <button class="btn btn-primary me-2">Edit</button>
                                 <button class="btn btn-danger me-2">Delete</button>
-                                <button class="btn btn-primary me-3 position-absolute end-0 ">Close</button>
+                                <button class="btn btn-primary me-3 position-absolute end-0 ">Back</button>
                             </div>
                         </div>
                     </div>                
