--- a/manager/room inventory/room_add.html
+++ b/manager/room inventory/room_add.html
@@ -6,7 +6,7 @@
     <title>Add a Room | Manager</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../assets/sidenav/sidenav.css">
-    <link rel="stylesheet" href="/assets/css/roomnav.css">
+    <link rel="stylesheet" href="../../assets/css/modulenav.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body>
@@ -18,8 +18,7 @@
             <div class="col-auto col-md-3 col-xl-2 px-sm-2 bg-primary">
                 <div class="d-flex flex-column align-items-stretch px-2 pt-2 text-white min-vh-100">
                     <a href="#" class="d-flex justify-content-center align-items-center text-white text-decoration-none pb-2 mb-md-0">
-                        <i class="fa-solid fa-hand-holding-heart display-6 me-sm-2"></i>
-                        <h1 class="display-4 d-none d-sm-inline">Aruga</h1>
+                        <img src="/assets/imgs/logo-white.png" alt="" width="70" height="70">
                     </a>
                     <ul class="nav nav-pills flex-column flex-shrink-0 mb-sm-auto mb-0 align-items-center align-items-sm-stretch" id="menu">
                         <li class="nav-item">
@@ -91,6 +90,9 @@
               
                       <!-- remove this div if there is no secondary navigation  -->
                       <div>
+                        <a class="navbar-brand text-dark" href="#">
+                            <img src="/assets/imgs/logo-blue.png" alt="" height="60">
+                        </a>
                         <a class="navbar-brand text-dark" href="#">
                           Room
                         </a>
