--- a/manager/room inventory/list_allrooms.html
+++ b/manager/room inventory/list_allrooms.html
@@ -90,6 +90,9 @@
               
                       <!-- remove this div if there is no secondary navigation  -->
                       <div>
+                        <a class="navbar-brand text-dark" href="#">
+                            <img src="/assets/imgs/logo-blue.png" alt="" height="60">
+                        </a>
                         <a class="navbar-brand text-dark sn-active" href="#">
                             Room
                         </a>
